# Tetris-For-Maya

./: .gitattributes  .gitignore  BOUZARD_Mathieu_Tetris.py  LICENSE  Readme.md  keyboardCatcher.py  poetry.toml  pyproject.toml  tetris.py  tetrisController.py  tetrisGlobals.py  tetrisLauncher.py  tetrisUi.py
V1/: tetris.py
V2/: constants.py  controller.py  keyboard_catcher.py  main.py  tetris.py  ui.py
V3/: pyproject.toml
V3/tetris_maya/: game.py  grid.py  math2.py  time2.py
V3/tetris_maya/resources/: shelf_Tetris.mel
V4/: .licensesnip  Cargo.toml  pyproject.toml
V4/python/tetris_maya/: __init__.py  constants.py  game.py  grid.py  maya2.py  rlib.pyi  tetrimino.py  time2.py
V4/src/: cube.rs  grid.rs  lib.rs  math.rs  maya.rs  point.rs  tetrimino.rs
V4/stubgen_macro/: Cargo.toml
V4/stubgen_macro/src/: lib.rs
resources/: logo.psd
tetris_maya/: __init__.py  constants.py  enum.py  game.py  grid.py  math2.py  maya2.py  tetrimino.py  time2.py
tetris_maya/resources/: shelf_Game.mel  shelf_Tetris.mel
