[tool.poetry]
name = "tetris-maya"
version = "3.0.0"
description = ""
authors = ["Mathieu <923463-mathbou@users.noreply.gitlab.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7, <=3.9"
pynput = {version = "*", optional = true } # only required in V2 for the keyboard catcher

[tool.poetry.extras]
v-two = ["pynput"]

[tool.poetry.dev-dependencies]
PySide2 = "~5.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.flakeheaven]
format = "colored"
max_line_length = 120
show_source = false
docstring-convention = "google"
allow-untyped-defs = true
max-complexity = 10
exclude = ["V1", "V2", ".venv"]

[tool.flakeheaven.plugins]
mccabe                   = ["+*"]
pycodestyle              = ["+*"]
pyflakes                 = ["+*"]
pylint                   = ["+*"]
flake8-annotations       = ["+*", "-ANN002", "-ANN101", "-ANN102", "-ANN20?"]
flake8-bandit            = ["+*"]
flake8-bugbear           = ["+*"]
flake8-builtins          = ["+*"]
flake8-comprehensions    = ["+*"]
flake8-docstrings        = ["+*", "-D10?", "-D400"]
flake8-eradicate         = ["+*"]
flake8-isort             = ["+*"]
flake8-print             = ["+*"]
flake8-printf-formatting = ["+*"]
flake8-pytest-style      = ["+*"]
flake8-return            = ["+*"]
pep8-naming              = ["+*"]

[tool.isort]
profile = 'black'
line_length = 120
atomic = true